webphoto/style.css
.view {
    display: grid;
    grid-template-columns: 1fr 260px;
    overflow: hidden;
}

/* Portrait phone mode */
@media only screen and (max-width: 700px) {
    .view {
        grid-template-columns: 1fr;
    }

    .controls {
        padding: 100px;
    }
}

.main-view {
    display: grid;
    grid-template-rows: 50px 1fr;
    width: 100%;
    height: 100%;
}

.controls {
    background-color: #CCC;
    padding: 10px;
    overflow: scroll;
}

#render {
    overflow: scroll;
    background-color: #ababab;
    height: 100%;
}

#image {
    object-fit: contain;
    overflow: hidden;
    max-height: 100%;
    vertical-align: middle;
    max-width: 100%;
}

#clip-bounds {
    overflow: hidden;
}

.center {
    margin: 0;
    position: relative;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

input[type=number] {
    width: 100%;
}

adjustment {
    display: grid;
    grid-template-columns: 1fr 60px;
}

.barheader{
    height:100%;
}

.toolbar{
    height:100%;
    display:grid;
    grid-template-columns: repeat(auto-fit, 50px);
}

.toolbar button{
    height:100%;
}

.title{
    display:inline-block;
    font-size:20px;
}

.svgfilter{
    width:0px;
    height:0px;
    position:absolute
}

.sidebtn{
    width:26px;
    height:26px;
}

